Bug 38414 - FILEOPEN FORMATTING complex table layout in DOCX
Summary: FILEOPEN FORMATTING complex table layout in DOCX
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other All
: medium normal
Assignee: Luboš Luňák
URL:
Whiteboard: target:4.3.0 target:4.2.4 target:4.1....
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-17 08:05 UTC by Andras Timar
Modified: 2019-12-09 07:26 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
sample document (21.29 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2011-06-17 08:05 UTC, Andras Timar
Details
screenshot in MSWord 2007 russian (306.30 KB, image/jpeg)
2012-01-27 04:33 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2011-06-17 08:05:58 UTC
Created attachment 48106 [details]
sample document

Table layout is not imported correctly into Writer. Please check the attached document.
Comment 1 Björn Michaelsen 2011-12-23 12:21:03 UTC
[This is an automated message.]
This bug was filed before the changes to Bugzilla on 2011-10-16. Thus it
started right out as NEW without ever being explicitly confirmed. The bug is
changed to state NEEDINFO for this reason. To move this bug from NEEDINFO back
to NEW please check if the bug still persists with the 3.5.0 beta1 or beta2 prereleases.
Details on how to test the 3.5.0 beta1 can be found at:
http://wiki.documentfoundation.org/QA/BugHunting_Session_3.5.0.-1

more detail on this bulk operation: http://nabble.documentfoundation.org/RFC-Operation-Spamzilla-tp3607474p3607474.html
Comment 2 sasha.libreoffice 2012-01-27 04:33:19 UTC
Created attachment 56219 [details]
screenshot in MSWord 2007 russian

reproducible in LibO 3.6.0 master on Fedora 64 bit
Comment 3 A (Andy) 2013-05-02 20:17:44 UTC
reproducible with LO 4.0.2.2 (Win7 Home, 64bit)
Comment 4 Xisco Faulí 2014-03-13 12:24:23 UTC
I close this bug report as RESOLVED WORKFORME because it is no longer reproducible.
Tested again in Windows 7 Enterprise with:
   - Libreoffice 4.1.4.2 Build  ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72
   - Libreoffice 4.2.1.1 Build  ID: d7dbbd7842e6a58b0f521599204e827654e1fb8b
   - Libreoffice 4.3.0.0.alpha0 ID: 9aa241f0370ab22096a9b1d70040130743448a65

Feel free to open this bug report again if you find that the bug is still reproducible under some special circumstances, etc.
Comment 5 Andras Timar 2014-03-13 12:46:43 UTC
I still see 2 differences compared to the reference rendering in Word.

1) The cell on the right side is not as tall as others in the same row.
2) The left border of cell on the bottom is aligned to the left border of the previous row.

The original bug was reported for 3.4. This table looked much worse in 3.4 (and up to 3.6). It became somewhat good in 4.0 and the situation hasn't improved since then.
Comment 6 Commit Notification 2014-03-18 19:58:04 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9970d5d9878bf8b40361606cfad6b25a2b6cc83d

workaround for rounding errors when handling merged cells (fdo#38414)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-03-18 19:58:18 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=075fc0c0a34875adf2833e5933b4982b9443a373

testcase for fdo#38414



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-03-18 21:57:27 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71d8e5770a332c8ba26048b69dd172704fb703df&h=libreoffice-4-2

workaround for rounding errors when handling merged cells (fdo#38414)


It will be available in LibreOffice 4.2.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2014-03-19 10:24:54 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e8b686149f2a9f21a7a52bb5710a8a6362cd7a35&h=libreoffice-4-1

workaround for rounding errors when handling merged cells (fdo#38414)


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Jean-Baptiste Faure 2014-03-30 09:54:53 UTC
As far I can see, this bug is now fixed (comments #6 to #9). I tested in 4.2.4.0.0+ and it seems good. Closing as resolved/fixed.
Please, feel free to reopen if I am wrong.

Best regards. JBF
Comment 11 Luboš Luňák 2014-03-31 11:52:54 UTC
Comment #5 2) is still unresolved.
Comment 12 Luboš Luňák 2014-04-23 12:58:35 UTC
Should be complete now.
Comment 13 Commit Notification 2014-04-23 12:58:50 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cf33af732ed0d3d553bb74636e3b14c55d44c153

handle w:gridBefore by faking cells (fdo#38414)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2019-12-08 14:55:13 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b2c6d2d961a6113d0f111fab45ae12a40d389a23

fdo#38414 tdf#44986: DOCX table import: handle gridBefore/After

It will be available in 6.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2019-12-09 07:26:47 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-6-4":

https://git.libreoffice.org/core/commit/25240856843444f1dac489f73ad058fad1b1d456

fdo#38414 tdf#44986: DOCX table import: handle gridBefore/After

It will be available in 6.4.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.