workaround for rounding errors when handling merged cells (fdo#38414)

Change-Id: I4d36e4b86c77a7356a8c221cbfc5735e925392ba